[package]
name = "ni_display"
version = "0.1.0"
authors = ["Harry van Haaren <harryhaaren@gmail.com>","Marc Bracher"]
edition = "2018"
description="Native Instruments Maschine Mk3 Embedded-graphics display driver"
license="MIT OR Apache-2.0"
readme = "./README.md"
keywords = ["embedded-graphics", "graphics", "embedded", "native-instruments", "maschine"]
repository = "https://github.com/openAVproductions/ni-display"

[dependencies]
embedded-graphics-core = "0.3.3"
rusb = "0.9.1"
thiserror = "1.0.30"
embedded-graphics = "0.7.1"
zerocopy = "0.6.1"


[[example]]
name = "hello"

[[example]]
name = "demo"

